--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+[env:micro]
 platform = atmelavr
-board = uno
+board = micro
 framework = arduino
+monitor_baud = 115200
+monitor_port = COM6
